[project]
name = "pytorch-trpo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gym>=0.26.2",
    "imageio>=2.37.0",
    "matplotlib>=3.8.0",
    "mujoco>=3.3.3",
    "numpy<2",
    "opencv-python>=4.8.0",
    "scipy>=1.16.0",
    "torch>=2.7.1",
]
